...
    success: "成功",
    retry: "再試行",
    search: "検索...",
    optional: "任意",
    required: "必須",
    done: "完了",
    ok: "OK",
    remove: "削除",
    yes: "はい",
    no: "いいえ",
    warning: "警告",
    version: "バージョン",
    seeAll: "すべて見る",
...
