...
            </View>
          )}
        </TouchableOpacity>

        <TouchableOpacity
          activeOpacity={0.7}
          testID="header-settings-btn"
          style={styles.iconButton}
          onPress={onPressSettings}
          accessibilityRole="button"
          accessibilityLabel="Configurações"
        >
          <Ionicons
...
